--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node api.js"
   },
   "keywords": [],
   "author": "",
@@ -11,8 +12,11 @@
   "description": "",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^6.7.0",
+    "cors": "^2.8.5",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1"
+    "mysql2": "^3.14.1",
+    "nodemon": "^3.1.10"
   },
   "devDependencies": {
     "prisma": "^6.7.0"
